--- a/web/resources/html/person.html
+++ b/web/resources/html/person.html
@@ -116,7 +116,8 @@
                 value: at(model, 'photo'),
                 uploadOnSelect: false">
 
-                <div id="files" data-dojo-type="dojox/form/uploader/FileList" data-dojo-props="uploaderId: 'photo'"></div>
+                <div id="files" data-dojo-type="dojox/form/uploader/FileList" data-dojo-props="uploaderId: 'photo'">
+                </div>
                 <button data-dojo-type="dijit/form/Button" type="submit" name="submitButton" value="Submit">Upload</button>
             </div>
         </div>
