--- a/web/resources/html/person.html
+++ b/web/resources/html/person.html
@@ -95,6 +95,22 @@
                                data-dojo-props="value: at(model, 'position')">
                     </td>
                 </tr>
+                <tr>
+                    <td>
+                        <label for="photo">Photo:</label>
+                    </td>
+                    <td>
+                        <input type="file" multiple="false"
+                               data-dojo-type="dojox/form/Uploader"
+                               name="uploadedfile"
+                               id="photo"
+                               data-dojo-props="
+                                label: 'Select photo',
+                                value: at(model, 'photo'),
+                                uploadOnSelect: false">
+                        <div id="files" data-dojo-type="dojox/form/uploader/FileList" data-dojo-props="uploaderId: 'photo'"></div>
+                    </td>
+                </tr>
             </table>
 
 
@@ -103,22 +119,6 @@
             <button data-dojo-type="dijit/form/Button" type="submit" name="submitButton" value="Submit">Submit</button>
             <!--<button data-dojo-type="dijit/form/Button" type="reset">Reset</button>-->
             <div data-dojo-type="dijit/layout/ContentPane" data-dojo-props="region:'center'">
-                <label for="photo">Photo:</label>
-
-                <input type="file" multiple="true" data-dojo-type="dojox/form/Uploader"
-                       name="uploadedfile"
-                       multiple="false"
-                       type="file"
-                       id="photo"
-                       data-dojo-props="
-                label: 'Select photo',
-
-                value: at(model, 'photo'),
-                uploadOnSelect: false">
-
-                <div id="files" data-dojo-type="dojox/form/uploader/FileList" data-dojo-props="uploaderId: 'photo'">
-                </div>
-                <button data-dojo-type="dijit/form/Button" type="submit" name="submitButton" value="Submit">Upload</button>
             </div>
         </div>
         </div>
