--- a/web/resources/html/person.html
+++ b/web/resources/html/person.html
@@ -1,6 +1,6 @@
 <div data-dojo-type="dijit/layout/BorderContainer" data-dojo-props="design: 'headline'"
      style="width: 100%; height:100%;">
-    <span id="toolbar"></span>
+    <span class="toChange" id="toolbar"></span>
     <div id="personDiv">
         <div data-dojo-type="dijit/layout/BorderContainer" style="height: 40%">
             <div data-dojo-type="dijit/layout/ContentPane" data-dojo-props="region:'left'" style="width: 60%">
