--- a/web/resources/html/person.html
+++ b/web/resources/html/person.html
@@ -1,7 +1,7 @@
-<div data-dojo-type="dijit/layout/BorderContainer" data-dojo-props="design: 'headline'"
+<div  class="toChange" id="personBorderContainer" data-dojo-type="dijit/layout/BorderContainer" data-dojo-props="design: 'headline'"
      style="width: 100%; height:100%;">
     <span class="toChange" id="toolbar"></span>
-    <div id="personDiv">
+    <div class="toChange" id="personDiv">
         <div data-dojo-type="dijit/layout/BorderContainer" style="height: 40%">
             <div data-dojo-type="dijit/layout/ContentPane" data-dojo-props="region:'left'" style="width: 60%">
                 <div data-dojo-type="dijit/layout/ContentPane" style="height: 40%">
@@ -19,7 +19,7 @@
             </div>
             <div data-dojo-type="dijit/layout/ContentPane" data-dojo-props="region:'right'" style="width: 40%">
                 <div data-dojo-type="dijit/layout/ContentPane" data-dojo-props="region:'bottom'">
-                    <img src="" id="avatar" style="width: 100%"/>
+                    <img src="" class="toChange" id="avatar" style="width: 100%"/>
                 </div>
             </div>
             <!--<div data-dojo-type="dijit/form/ValidationTextBox" data-dojo-props="value: at(model, 'firstname')"/>-->
@@ -28,7 +28,7 @@
             <div data-dojo-type="dijit/layout/ContentPane" data-dojo-props="region:'center'">
 
                 <script type="dojo/require">at: "dojox/mvc/at"</script>
-                <div data-dojo-type="dijit/form/Form" id="personForm" data-dojo-id="personForm"
+                <div data-dojo-type="dijit/form/Form" class="toChange" id="personForm" data-dojo-id="personForm"
                      data-dojo-props="region:'right'"
                      encType="application/x-www-form-urlencoded" action="/ecm/rest/employees" method="post"
                      style="border: 0px">
@@ -57,6 +57,7 @@
                             <td>
                                 <input type="text"
                                        name="id"
+                                       class="toChange"
                                        id="id"
                                        data-dojo-type="dijit/form/TextBox"
                                        data-dojo-props="value: at(model, 'id')">
@@ -69,6 +70,7 @@
                             <td>
                                 <input type="text"
                                        name="firstname"
+                                       class="toChange"
                                        id="firstname"
                                        required="true"
                                        data-dojo-type="dijit/form/ValidationTextBox"
@@ -82,6 +84,7 @@
                             <td>
                                 <input type="text"
                                        id="surname"
+                                       class="toChange"
                                        name="surname"
                                        required="true"
                                        data-dojo-type="dijit/form/ValidationTextBox"
@@ -95,6 +98,7 @@
                             <td>
                                 <input type="text"
                                        id="patronymic"
+                                       class="toChange"
                                        name="patronymic"
                                        required="true"
                                        data-dojo-type="dijit/form/ValidationTextBox"
@@ -108,6 +112,7 @@
                             <td>
                                 <input type="text"
                                        id="birthday"
+                                       class="toChange"
                                        name="birthday"
                                        required="true"
                                        data-dojo-type="dijit/form/DateTextBox"
@@ -121,6 +126,7 @@
                             <td>
                                 <input type="text"
                                        id="position"
+                                       class="toChange"
                                        name="position"
                                        required="true"
                                        data-dojo-type="dijit/form/ValidationTextBox"
@@ -136,11 +142,12 @@
                                        data-dojo-type="dojox/form/Uploader"
                                        name="uploadedfile"
                                        id="photo"
+                                       class="toChange"
                                        data-dojo-props="
                                 label: 'Select photo',
                                 value: at(model, 'photo'),
                                 uploadOnSelect: false">
-                                <div id="files" data-dojo-type="dojox/form/uploader/FileList"
+                                <div id="files" class="toChange" data-dojo-type="dojox/form/uploader/FileList"
                                      data-dojo-props="uploaderId: 'photo'"></div>
                             </td>
                         </tr>
