Fix form widget startup

--- a/web/resources/html/person.html
+++ b/web/resources/html/person.html
@@ -1,20 +1,18 @@
-<div  class="toChange" id="personBorderContainer" data-dojo-type="dijit/layout/BorderContainer" data-dojo-props="design: 'headline'"
+<div data-dojo-type="dijit/layout/BorderContainer" data-dojo-props="design: 'headline'"
      style="width: 100%; height:100%;">
+    <script type="dojo/require">at: "dojox/mvc/at"</script>
     <span class="toChange" id="toolbar"></span>
     <div class="toChange" id="personDiv">
-        <div data-dojo-type="dijit/layout/BorderContainer" style="height: 40%">
+        <div  data-dojo-type="dijit/layout/BorderContainer" style="height: 40%">
             <div data-dojo-type="dijit/layout/ContentPane" data-dojo-props="region:'left'" style="width: 60%">
                 <div data-dojo-type="dijit/layout/ContentPane" style="height: 40%">
                 </div>
                 <div data-dojo-type="dijit/layout/ContentPane"
                      data-dojo-props="region:'bottom'"
                      style="text-align: center; font-size: large">
-                    <span data-dojo-type="dijit/_WidgetBase"
-                          data-dojo-props="_setValueAttr: {node: 'domNode', type: 'innerText'}, value: at(model, 'firstName')"></span>
-                    <span data-dojo-type="dijit/_WidgetBase"
-                          data-dojo-props="_setValueAttr: {node: 'domNode', type: 'innerText'}, value: at(model, 'surname')"></span>
-                    <span data-dojo-type="dijit/_WidgetBase"
-                          data-dojo-props="_setValueAttr: {node: 'domNode', type: 'innerText'}, value: at(model, 'patronymic')"></span>
+                    <span data-dojo-type="dojox/mvc/Output" data-dojo-props="value: at(this.model, 'firstName')"></span>
+                    <span data-dojo-type="dojox/mvc/Output" data-dojo-props="value: at(this.model, 'surname')"></span>
+                    <span data-dojo-type="dojox/mvc/Output" data-dojo-props="value: at(this.model, 'patronymic')"></span>
                 </div>
             </div>
             <div data-dojo-type="dijit/layout/ContentPane" data-dojo-props="region:'right'" style="width: 40%">
@@ -25,30 +23,30 @@
             <!--<div data-dojo-type="dijit/form/ValidationTextBox" data-dojo-props="value: at(model, 'firstname')"/>-->
         </div>
         <div data-dojo-type="dijit/layout/BorderContainer" style="height: 50%">
-            <div data-dojo-type="dijit/layout/ContentPane" data-dojo-props="region:'center'">
+            <div  data-dojo-type="dijit/layout/ContentPane" data-dojo-props="region:'center'">
 
-                <script type="dojo/require">at: "dojox/mvc/at"</script>
+                <!--<script type="dojo/require">at: "dojox/mvc/at"</script>-->
                 <div data-dojo-type="dijit/form/Form" class="toChange" id="personForm" data-dojo-id="personForm"
                      data-dojo-props="region:'right'"
                      encType="application/x-www-form-urlencoded" action="/ecm/rest/employees" method="post"
                      style="border: 0px">
                     <script type="dojo/on" data-dojo-event="reset">
-                return confirm('Press OK to reset widget values');
+                    return confirm('Press OK to reset widget values');
 
 
-                    </script>
+                        </script>
 
-                    <script type="dojo/on" data-dojo-event="submit">
-                if(this.validate()){
-                    return confirm('Form is valid, press OK to submit');
-                }else{
-                    alert('Form contains invalid data.  Please correct first');
-                    return false;
-                }
-                return true;
+                        <script type="dojo/on" data-dojo-event="submit">
+                    if(this.validate()){
+                        return confirm('Form is valid, press OK to submit');
+                    }else{
+                        alert('Form contains invalid data.  Please correct first');
+                        return false;
+                    }
+                    return true;
 
 
-                    </script>
+                  </script>
                     <table style="border: 1px solid #9f9f9f;" cellspacing="10">
                         <tr>
                             <td>
@@ -60,7 +58,7 @@
                                        class="toChange"
                                        id="id"
                                        data-dojo-type="dijit/form/TextBox"
-                                       data-dojo-props="value: at(model, 'id')">
+                                       data-dojo-props="value: at(this.model, 'id')">
                             </td>
                         </tr>
                         <tr>
@@ -74,7 +72,7 @@
                                        id="firstname"
                                        required="true"
                                        data-dojo-type="dijit/form/ValidationTextBox"
-                                       data-dojo-props="value: at(model, 'firstName')">
+                                       data-dojo-props="value: at(this.model, 'firstName')">
                             </td>
                         </tr>
                         <tr>
@@ -88,7 +86,7 @@
                                        name="surname"
                                        required="true"
                                        data-dojo-type="dijit/form/ValidationTextBox"
-                                       data-dojo-props="value: at(model, 'surname')">
+                                       data-dojo-props="value: at(this.model, 'surname')">
                             </td>
                         </tr>
                         <tr>
@@ -102,7 +100,7 @@
                                        name="patronymic"
                                        required="true"
                                        data-dojo-type="dijit/form/ValidationTextBox"
-                                       data-dojo-props="value: at(model, 'patronymic')">
+                                       data-dojo-props="value: at(this.model, 'patronymic')">
                             </td>
                         </tr>
                         <tr>
@@ -116,7 +114,7 @@
                                        name="birthday"
                                        required="true"
                                        data-dojo-type="dijit/form/DateTextBox"
-                                       data-dojo-props="value: at(model, 'birthday')"/>
+                                       data-dojo-props="value: at(this.model, 'birthday')"/>
                             </td>
                         </tr>
                         <tr>
@@ -130,7 +128,7 @@
                                        name="position"
                                        required="true"
                                        data-dojo-type="dijit/form/ValidationTextBox"
-                                       data-dojo-props="value: at(model, 'position')">
+                                       data-dojo-props="value: at(this.model, 'position')">
                             </td>
                         </tr>
                         <tr>
@@ -145,7 +143,7 @@
                                        class="toChange"
                                        data-dojo-props="
                                 label: 'Select photo',
-                                value: at(model, 'photo'),
+                                value: at(this.model, 'photo'),
                                 uploadOnSelect: false">
                                 <div id="files" class="toChange" data-dojo-type="dojox/form/uploader/FileList"
                                      data-dojo-props="uploaderId: 'photo'"></div>
