--- a/web/resources/html/person.html
+++ b/web/resources/html/person.html
@@ -1,8 +1,8 @@
 <div data-dojo-type="dijit/layout/BorderContainer" data-dojo-props="design: 'headline'"
      style="width: 100%; height:100%;">
     <script type="dojo/require">at: "dojox/mvc/at"</script>
-    <span class="toChange" id="toolbar"></span>
-    <div class="toChange" id="personDiv">
+    <div data-dojo-type="dijit/Toolbar" data-dojo-attach-point="toolbar"></div>
+    <div id="personDiv">
         <div  data-dojo-type="dijit/layout/BorderContainer" style="height: 40%">
             <div data-dojo-type="dijit/layout/ContentPane" data-dojo-props="region:'left'" style="width: 60%">
                 <div data-dojo-type="dijit/layout/ContentPane" style="height: 40%">
@@ -17,7 +17,8 @@
             </div>
             <div data-dojo-type="dijit/layout/ContentPane" data-dojo-props="region:'right'" style="width: 40%">
                 <div data-dojo-type="dijit/layout/ContentPane" data-dojo-props="region:'bottom'">
-                    <img src="" class="toChange" id="avatar" style="width: 100%"/>
+                    <!--<img src="" class="toChange"  style="width: 100%"/>-->
+                    <img src="" class="${baseClass}Image" data-dojo-attach-point="avatar"  style="width: 100%"/>
                 </div>
             </div>
             <!--<div data-dojo-type="dijit/form/ValidationTextBox" data-dojo-props="value: at(model, 'firstname')"/>-->
@@ -26,7 +27,8 @@
             <div  data-dojo-type="dijit/layout/ContentPane" data-dojo-props="region:'center'">
 
                 <!--<script type="dojo/require">at: "dojox/mvc/at"</script>-->
-                <div data-dojo-type="dijit/form/Form" class="toChange" id="personForm" data-dojo-id="personForm"
+                <div data-dojo-type="dijit/form/Form"
+                     data-dojo-attach-point="form"
                      data-dojo-props="region:'right'"
                      encType="multipart/form-data" action="/ecm/rest/employees" method="post"
                      style="border: 0px">
@@ -50,26 +52,22 @@
                     <table style="border: 1px solid #9f9f9f;" cellspacing="10">
                         <tr>
                             <td>
-                                <label for="firstname">ID:</label>
+                                <label>ID:</label>
                             </td>
                             <td>
                                 <input type="text"
                                        name="id"
-                                       class="toChange"
-                                       id="id"
                                        data-dojo-type="dijit/form/TextBox"
                                        data-dojo-props="value: at(this.model, 'id')">
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <label for="firstname">Fisrt name:</label>
+                                <label>Fisrt name:</label>
                             </td>
                             <td>
                                 <input type="text"
                                        name="firstname"
-                                       class="toChange"
-                                       id="firstname"
                                        required="true"
                                        data-dojo-type="dijit/form/ValidationTextBox"
                                        data-dojo-props="value: at(this.model, 'firstName')">
@@ -77,12 +75,10 @@
                         </tr>
                         <tr>
                             <td>
-                                <label for="surname">Surname:</label>
+                                <label>Surname:</label>
                             </td>
                             <td>
                                 <input type="text"
-                                       id="surname"
-                                       class="toChange"
                                        name="surname"
                                        required="true"
                                        data-dojo-type="dijit/form/ValidationTextBox"
@@ -91,12 +87,10 @@
                         </tr>
                         <tr>
                             <td>
-                                <label for="patronymic">Patronymic:</label>
+                                <label>Patronymic:</label>
                             </td>
                             <td>
                                 <input type="text"
-                                       id="patronymic"
-                                       class="toChange"
                                        name="patronymic"
                                        required="true"
                                        data-dojo-type="dijit/form/ValidationTextBox"
@@ -105,12 +99,10 @@
                         </tr>
                         <tr>
                             <td>
-                                <label for="birthday">Date of birth:</label>
+                                <label>Date of birth:</label>
                             </td>
                             <td>
                                 <input type="text"
-                                       id="birthday"
-                                       class="toChange"
                                        name="birthday"
                                        required="true"
                                        data-dojo-type="dijit/form/DateTextBox"
@@ -119,12 +111,10 @@
                         </tr>
                         <tr>
                             <td>
-                                <label for="position">Position:</label>
+                                <label>Position:</label>
                             </td>
                             <td>
                                 <input type="text"
-                                       id="position"
-                                       class="toChange"
                                        name="position"
                                        required="true"
                                        data-dojo-type="dijit/form/ValidationTextBox"
@@ -133,20 +123,18 @@
                         </tr>
                         <tr>
                             <td>
-                                <label for="photo">Photo:</label>
+                                <label>Photo:</label>
                             </td>
                             <td>
                                 <input type="file" multiple="false"
                                        data-dojo-type="dojox/form/Uploader"
                                        name="uploadedfile"
-                                       id="photo"
                                        class="toChange"
                                        data-dojo-props="
                                 label: 'Select photo',
-                                value: at(this.model, 'photo'),
                                 uploadOnSelect: false">
-                                <div id="files" class="toChange" data-dojo-type="dojox/form/uploader/FileList"
-                                     data-dojo-props="uploaderId: 'photo'"></div>
+                                <div class="toChange" data-dojo-type="dojox/form/uploader/FileList"
+                                     data-dojo-props="uploaderId: 'photo', value: at(this.model, 'photo')"></div>
                             </td>
                         </tr>
                     </table>
