--- a/web/resources/html/person.html
+++ b/web/resources/html/person.html
@@ -1,5 +1,5 @@
 <div data-dojo-type="dijit/layout/BorderContainer" data-dojo-props="design: 'headline'"
-     style="width: 100%; height:100%;">
+     style="width: 100%; height:90%;">
     <script type="dojo/require">at: "dojox/mvc/at"</script>
     <div data-dojo-type="dijit/Toolbar" data-dojo-attach-point="toolbar"></div>
     <div id="personDiv">
@@ -10,7 +10,7 @@
                 <div data-dojo-type="dijit/layout/ContentPane"
                      data-dojo-props="region:'bottom'"
                      style="text-align: center; font-size: large">
-                    <span data-dojo-type="dojox/mvc/Output" data-dojo-props="value: at(this.model, 'firstName')"></span>
+                    <span data-dojo-type="dojox/mvc/Output" data-dojo-props="value: at(this.model, 'firstname')"></span>
                     <span data-dojo-type="dojox/mvc/Output" data-dojo-props="value: at(this.model, 'surname')"></span>
                     <span data-dojo-type="dojox/mvc/Output" data-dojo-props="value: at(this.model, 'patronymic')"></span>
                 </div>
@@ -18,7 +18,7 @@
             <div data-dojo-type="dijit/layout/ContentPane" data-dojo-props="region:'right'" style="width: 40%">
                 <div data-dojo-type="dijit/layout/ContentPane" data-dojo-props="region:'bottom'">
                     <!--<img src="" class="toChange"  style="width: 100%"/>-->
-                    <img src="" class="${baseClass}Image" data-dojo-attach-point="avatar"  style="width: 100%"/>
+                    <img src="" class="${baseClass}Image" data-dojo-props="region:'center'" data-dojo-attach-point="avatar"  style="height: 100%"/>
                 </div>
             </div>
             <!--<div data-dojo-type="dijit/form/ValidationTextBox" data-dojo-props="value: at(model, 'firstname')"/>-->
@@ -34,11 +34,9 @@
                      style="border: 0px">
                     <script type="dojo/on" data-dojo-event="reset">
                     return confirm('Press OK to reset widget values');
+                     </script>
 
-
-                        </script>
-
-                        <script type="dojo/on" data-dojo-event="submit">
+                    <script type="dojo/on" data-dojo-event="submit">
                     if(this.validate()){
                         return confirm('Form is valid, press OK to submit');
                     }else{
@@ -46,9 +44,7 @@
                         return false;
                     }
                     return true;
-
-
-                  </script>
+                    </script>
                     <table style="border: 1px solid #9f9f9f;" cellspacing="10">
                         <tr>
                             <td>
@@ -70,7 +66,7 @@
                                        name="firstname"
                                        required="true"
                                        data-dojo-type="dijit/form/ValidationTextBox"
-                                       data-dojo-props="value: at(this.model, 'firstName')">
+                                       data-dojo-props="value: at(this.model, 'firstname')">
                             </td>
                         </tr>
                         <tr>
@@ -121,22 +117,22 @@
                                        data-dojo-props="value: at(this.model, 'position')">
                             </td>
                         </tr>
-                        <tr>
-                            <td>
-                                <label>Photo:</label>
-                            </td>
-                            <td>
-                                <input type="file" multiple="false"
-                                       data-dojo-type="dojox/form/Uploader"
-                                       name="uploadedfile"
-                                       class="toChange"
-                                       data-dojo-props="
-                                label: 'Select photo',
-                                uploadOnSelect: false">
-                                <div class="toChange" data-dojo-type="dojox/form/uploader/FileList"
-                                     data-dojo-props="uploaderId: 'photo', value: at(this.model, 'photo')"></div>
-                            </td>
-                        </tr>
+                        <!--<tr>-->
+                            <!--<td>-->
+                                <!--<label>Photo:</label>-->
+                            <!--</td>-->
+                            <!--<td>-->
+                                <!--<input type="file" multiple="false"-->
+                                       <!--data-dojo-type="dojox/form/Uploader"-->
+                                       <!--name="uploadedfile"-->
+                                       <!--class="toChange"-->
+                                       <!--data-dojo-props="-->
+                                <!--label: 'Select photo',-->
+                                <!--uploadOnSelect: false">-->
+                                <!--<div class="toChange" data-dojo-type="dojox/form/uploader/FileList"-->
+                                     <!--data-dojo-props="uploaderId: 'photo', value: at(this.model, 'photo')"></div>-->
+                            <!--</td>-->
+                        <!--</tr>-->
                     </table>
 
 
@@ -149,6 +145,36 @@
                 </div>
 
 
+                <form data-dojo-type="dijit/form/Form" data-dojo-attach-point="uploadedform" enctype="multipart/form-data"  method="post" >
+                    <input type="file" multiple="false">
+                </form>
+                <div  class="${baseClass}Uploader"  data-dojo-attach-point="uploader"></div>
+                <!--<form encType="multipart/form-data" action="/ecm/rest/employees/1/photo" method="post"-->
+                     <!--style="border: 0px">-->
+
+                    <!--<table style="border: 1px solid #9f9f9f;" cellspacing="10">-->
+                        <!--<tr>-->
+                            <!--<td>-->
+                                <!--<label>Photo:</label>-->
+                            <!--</td>-->
+                            <!--<td>-->
+                                <!--<input type="file" multiple="false"-->
+                                       <!--data-dojo-type="dojox/form/Uploader"-->
+                                       <!--data-dojo-attach-point="uploader"-->
+                                       <!--data-dojo-props="-->
+                                <!--label: 'Select photo',-->
+                                <!--uploadOnSelect: false">-->
+                            <!--</td>-->
+                        <!--</tr>-->
+                    <!--</table>-->
+
+
+                    <!--&lt;!&ndash;<button data-dojo-type="dijit/form/Button" type="button" onClick="console.log(myForm.getValues())">Get Values from form!</button>&ndash;&gt;-->
+                    <!--<button data-dojo-type="dijit/form/Button" data-dojo-attach-point="uploadButton" type="button" name="submitButton">Upload</button>-->
+
+                    <!--&lt;!&ndash;</button>&ndash;&gt;-->
+                    <!--&lt;!&ndash;<button data-dojo-type="dijit/form/Button" type="reset">Reset</button>&ndash;&gt;-->
+                <!--</form>-->
             </div>
 
         </div>
