Add loading photo and pane switch

--- a/web/resources/html/person.html
+++ b/web/resources/html/person.html
@@ -16,7 +16,7 @@
                 </div>
             </div>
             <div data-dojo-type="dijit/layout/ContentPane" data-dojo-props="region:'right'" style="width: 40%">
-                <div data-dojo-type="dijit/layout/ContentPane" data-dojo-props="region:'bottom'">
+                <div data-dojo-type="dijit/layout/ContentPane" data-dojo-props="region:'center'" >
                     <!--<img src="" class="toChange"  style="width: 100%"/>-->
                     <img src="" class="${baseClass}Image" data-dojo-props="region:'center'" data-dojo-attach-point="avatar"  style="height: 100%"/>
                 </div>
@@ -117,64 +117,18 @@
                                        data-dojo-props="value: at(this.model, 'position')">
                             </td>
                         </tr>
-                        <!--<tr>-->
-                            <!--<td>-->
-                                <!--<label>Photo:</label>-->
-                            <!--</td>-->
-                            <!--<td>-->
-                                <!--<input type="file" multiple="false"-->
-                                       <!--data-dojo-type="dojox/form/Uploader"-->
-                                       <!--name="uploadedfile"-->
-                                       <!--class="toChange"-->
-                                       <!--data-dojo-props="-->
-                                <!--label: 'Select photo',-->
-                                <!--uploadOnSelect: false">-->
-                                <!--<div class="toChange" data-dojo-type="dojox/form/uploader/FileList"-->
-                                     <!--data-dojo-props="uploaderId: 'photo', value: at(this.model, 'photo')"></div>-->
-                            <!--</td>-->
-                        <!--</tr>-->
                     </table>
 
 
-                    <!--<button data-dojo-type="dijit/form/Button" type="button" onClick="console.log(myForm.getValues())">Get Values from form!</button>-->
-                    <!--<button data-dojo-type="dijit/form/Button" type="submit" name="submitButton" value="Submit">Submit-->
-                    <!--</button>-->
-                    <!--<button data-dojo-type="dijit/form/Button" type="reset">Reset</button>-->
                     <div data-dojo-type="dijit/layout/ContentPane" data-dojo-props="region:'center'">
                     </div>
                 </div>
 
 
                 <form data-dojo-type="dijit/form/Form" data-dojo-attach-point="uploadedform" enctype="multipart/form-data"  method="post" >
-                    <input type="file" multiple="false">
                 </form>
                 <div  class="${baseClass}Uploader"  data-dojo-attach-point="uploader"></div>
-                <!--<form encType="multipart/form-data" action="/ecm/rest/employees/1/photo" method="post"-->
-                     <!--style="border: 0px">-->
 
-                    <!--<table style="border: 1px solid #9f9f9f;" cellspacing="10">-->
-                        <!--<tr>-->
-                            <!--<td>-->
-                                <!--<label>Photo:</label>-->
-                            <!--</td>-->
-                            <!--<td>-->
-                                <!--<input type="file" multiple="false"-->
-                                       <!--data-dojo-type="dojox/form/Uploader"-->
-                                       <!--data-dojo-attach-point="uploader"-->
-                                       <!--data-dojo-props="-->
-                                <!--label: 'Select photo',-->
-                                <!--uploadOnSelect: false">-->
-                            <!--</td>-->
-                        <!--</tr>-->
-                    <!--</table>-->
-
-
-                    <!--&lt;!&ndash;<button data-dojo-type="dijit/form/Button" type="button" onClick="console.log(myForm.getValues())">Get Values from form!</button>&ndash;&gt;-->
-                    <!--<button data-dojo-type="dijit/form/Button" data-dojo-attach-point="uploadButton" type="button" name="submitButton">Upload</button>-->
-
-                    <!--&lt;!&ndash;</button>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<button data-dojo-type="dijit/form/Button" type="reset">Reset</button>&ndash;&gt;-->
-                <!--</form>-->
             </div>
 
         </div>
