Add save to new person tab

--- a/web/resources/html/person.html
+++ b/web/resources/html/person.html
@@ -54,7 +54,7 @@
                                 <input type="text"
                                        name="id"
                                        data-dojo-type="dijit/form/TextBox"
-                                       data-dojo-props="value: at(this.model, 'id')">
+                                       data-dojo-props="value: at(this.model, 'id'), readOnly: true">
                             </td>
                         </tr>
                         <tr>
