Migrate from gson to jax-rs

--- a/web/resources/html/incoming.html
+++ b/web/resources/html/incoming.html
@@ -73,7 +73,7 @@
                         <label>Text:</label>
                     </td>
                     <td>
-                        <div data-dojo-type="dijit/Editor" id="editor1" data-dojo-props="value: at(this.model, 'text')">
+                        <div data-dojo-type="dijit/Editor"  data-dojo-props="value: at(this.model, 'text')">
                         </div>
                     </td>
                 </tr>
