--- a/web/resources/html/incoming.html
+++ b/web/resources/html/incoming.html
@@ -91,7 +91,7 @@
                         <input type="text"
                                name="date"
                                required="true"
-                               data-dojo-type="dijit/form/DateTextBox"
+                               data-dojo-type="/ecm/resources/js/LocalDateTextBox.js"
                                data-dojo-props="value: at(this.model, 'date')"/>
                     </td>
                 </tr>
